# textviewers

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  TODO.md  main.cpp
examples/viewer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
logic/: AbstractDocument.cpp  AbstractDocument.h  AbstractView.cpp  AbstractView.h  ByteDeque.cpp  ByteDeque.h  ByteDocument.cpp  ByteDocument.h  ByteView.cpp  ByteView.h  ChangeableDocument.cpp  ChangeableDocument.h  DString.cpp  DString.h  IBaseAccess.h  IByteAccess.h  IDeque.h  ILineAccess.h  Interface.h  LineDeque.cpp  LineDeque.h  LineDocument.cpp  LineDocument.h  LineIndexedDocument.cpp  LineIndexedDocument.h  LineView.cpp  LineView.h  Wrap.cpp  Wrap.h
misc/: selection.cpp  selection.h  util.cpp  util.h
test/: testBack.cpp  testBasics.cpp  testBeginX.cpp  testByteDocument.cpp  testIByteAccess.cpp  testIByteAccessML.cpp  testMaxline.cpp  testPosition.cpp  testPositionL.cpp  testProportional.cpp  testProportionalL.cpp  testScroll.cpp  testScrollL.cpp  testTabs.cpp  testUnicode.cpp  testUtil.cpp  testWrap.cpp
test/data/: BOM.txt  main.cpp0  main.cpp1  proportional.txt  shortwrapr.txt  textviewer.h0  textviewer.h1
wid/: PaintArea.cpp  PaintArea.h  TextViewer.cpp  TextViewer.h
